--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -38,17 +38,31 @@
                                             <path d="M131.3 376.7H64.2v483.2c0 37.1 30.3 67.3 67.1 67.3H892c37 0 67.1-30.3 67.1-67.3V376.7H131.3z m768.3-164.1H798.2c-2 0-4 0.1-6.1 0.3h-306v-54.6c0-33.2-26.9-60.1-60-60.1H124.5c-33.2 0-60 27-60 60.1v174h894.9V272.4c-0.1-32.9-27-59.8-59.8-59.8z"
                                                   fill="" p-id="6774"></path>
                                         </svg>
-                                        <svg t="1709500412224" id="success-icon" class="icon" viewBox="0 0 1024 1024"
-                                             version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4991" width="70"
-                                             height="70">
-                                            <path d="M512 929.959184c-230.4 0-417.959184-187.559184-417.959184-417.959184s187.559184-417.959184 417.959184-417.959184 417.959184 187.559184 417.959184 417.959184-187.559184 417.959184-417.959184 417.959184z"
-                                                  fill="#16C4AF" p-id="4992"></path>
-                                            <path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388l-104.489796-104.489796c-8.359184-8.359184-8.359184-21.420408 0-29.779591 8.359184-8.359184 21.420408-8.359184 29.779592 0l104.489795 104.489796c8.359184 8.359184 8.359184 21.420408 0 29.779591-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z"
-                                                  fill="#DCFFFA" p-id="4993"></path>
-                                            <path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388-8.359184-8.359184-8.359184-21.420408 0-29.779591l208.979591-208.979592c8.359184-8.359184 21.420408-8.359184 29.779592 0 8.359184 8.359184 8.359184 21.420408 0 29.779592l-208.979592 208.979591c-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z"
-                                                  fill="#DCFFFA" p-id="4994"></path>
-                                        </svg>
+                                        {#                                        <svg t="1709500412224" id="success-icon" class="icon" viewBox="0 0 1024 1024"#}
+                                        {#                                             version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4991" width="70"#}
+                                        {#                                             height="70">#}
+                                        {#                                            <path d="M512 929.959184c-230.4 0-417.959184-187.559184-417.959184-417.959184s187.559184-417.959184 417.959184-417.959184 417.959184 187.559184 417.959184 417.959184-187.559184 417.959184-417.959184 417.959184z"#}
+                                        {#                                                  fill="#16C4AF" p-id="4992"></path>#}
+                                        {#                                            <path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388l-104.489796-104.489796c-8.359184-8.359184-8.359184-21.420408 0-29.779591 8.359184-8.359184 21.420408-8.359184 29.779592 0l104.489795 104.489796c8.359184 8.359184 8.359184 21.420408 0 29.779591-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z"#}
+                                        {#                                                  fill="#DCFFFA" p-id="4993"></path>#}
+                                        {#                                            <path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388-8.359184-8.359184-8.359184-21.420408 0-29.779591l208.979591-208.979592c8.359184-8.359184 21.420408-8.359184 29.779592 0 8.359184 8.359184 8.359184 21.420408 0 29.779592l-208.979592 208.979591c-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z"#}
+                                        {#                                                  fill="#DCFFFA" p-id="4994"></path>#}
+                                        {#                                        </svg>#}
+                                        <svg height="70px" width="70px" version="1.1" id="success-icon" class="icon"
+                                             xmlns="http://www.w3.org/2000/svg"
+                                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 309.267 309.267"
+                                             xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round"
+                                               stroke-linejoin="round"></g>
+                                            <g id="SVGRepo_iconCarrier"> <g> <path style="fill:#E2574C;"
+                                                                                   d="M38.658,0h164.23l87.049,86.711v203.227c0,10.679-8.659,19.329-19.329,19.329H38.658 c-10.67,0-19.329-8.65-19.329-19.329V19.329C19.329,8.65,27.989,0,38.658,0z"></path>
+                                                <path style="fill:#B53629;"
+                                                      d="M289.658,86.981h-67.372c-10.67,0-19.329-8.659-19.329-19.329V0.193L289.658,86.981z"></path>
+                                                <path style="fill:#FFFFFF;"
+                                                      d="M217.434,146.544c3.238,0,4.823-2.822,4.823-5.557c0-2.832-1.653-5.567-4.823-5.567h-18.44 c-3.605,0-5.615,2.986-5.615,6.282v45.317c0,4.04,2.3,6.282,5.412,6.282c3.093,0,5.403-2.242,5.403-6.282v-12.438h11.153 c3.46,0,5.19-2.832,5.19-5.644c0-2.754-1.73-5.49-5.19-5.49h-11.153v-16.903C204.194,146.544,217.434,146.544,217.434,146.544z M155.107,135.42h-13.492c-3.663,0-6.263,2.513-6.263,6.243v45.395c0,4.629,3.74,6.079,6.417,6.079h14.159 c16.758,0,27.824-11.027,27.824-28.047C183.743,147.095,173.325,135.42,155.107,135.42z M155.755,181.946h-8.225v-35.334h7.413 c11.221,0,16.101,7.529,16.101,17.918C171.044,174.253,166.25,181.946,155.755,181.946z M106.33,135.42H92.964 c-3.779,0-5.886,2.493-5.886,6.282v45.317c0,4.04,2.416,6.282,5.663,6.282s5.663-2.242,5.663-6.282v-13.231h8.379 c10.341,0,18.875-7.326,18.875-19.107C125.659,143.152,117.425,135.42,106.33,135.42z M106.108,163.158h-7.703v-17.097h7.703 c4.755,0,7.78,3.711,7.78,8.553C113.878,159.447,110.863,163.158,106.108,163.158z"></path> </g> </g></svg>
+
                                     </div>
+                                    <small id="file-name"></small>
                                     <p class="pointer-none text-gray-500 " id="upload-instruction"><span
                                             class="text-sm">Drag & Drop</span> files here <br/></p>
                                     <p class="pointer-none text-gray-500 " id="success-alert"><span class="text-sm">File Select Success! Click Upload!</span><br/>
@@ -130,6 +144,7 @@
             var successIcon = document.getElementById('success-icon');
             var uploadInstruction = document.getElementById('upload-instruction');
             var successAlert = document.getElementById('success-alert');
+            var fileName = document.getElementById('file-name')
             var fileInput = document.querySelector('input[type="file"]');
             var uploadButton = document.querySelector('button[type="submit"]');
 
@@ -141,6 +156,7 @@
                     successIcon.style.display = 'block';
                     uploadInstruction.style.display = 'none';
                     successAlert.style.display = 'block';
+                    fileName.textContent = event.target.files[0].name;
                 }
             });
 
@@ -191,8 +207,19 @@
             // Assuming the file input has a single child element (the actual input)
             fileInput.children[0].files = files; // Assign the dropped file(s) to the file input
 
-            // Optionally process the file here (e.g., display filename, upload to server)
-            const fileName = files[0].name;
+            var fileIcon = document.getElementById('file-icon');
+            var successIcon = document.getElementById('success-icon');
+            var uploadInstruction = document.getElementById('upload-instruction');
+            var successAlert = document.getElementById('success-alert');
+            var fileName = document.getElementById('file-name')
+
+            if (fileInput.children[0].files.length > 0) {
+                fileIcon.style.display = 'none';
+                successIcon.style.display = 'block';
+                uploadInstruction.style.display = 'none';
+                successAlert.style.display = 'block';
+                fileName.textContent = files[0].name;
+            }
             console.log(`File dropped: ${fileName}`);
         }
 
