Add profile at the bottom of sidebar

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -1,3 +1,21 @@
 .nav-item {
     margin-bottom: 10px;
 }
+
+.avatar-name{
+    position:absolute;
+    bottom: 90px;
+    display: flex;
+    flex-direction: row;
+}
+
+.sidebar-img{
+    width: 35px;
+    height: 35px;
+}
+
+.avatar-name h5{
+    position: relative;
+    top:7px;
+    left: 7px;
+}
