--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -37,8 +37,8 @@
         <li><a class="dropdown-item" href="{% url 'password' %}">Change password</a></li>
         <li><a class="dropdown-item" href="{% url 'preferences' %}">Preferences</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="{% url 'log_out' %}" style="display: flex; align-items: center;">Log out
-            <span class="material-symbols-outlined" style="padding: 5px; margin-left: 5px">logout</span></a></li>
+        <li><a class="dropdown-item" href="{% url 'log_out' %}" style="display: flex; align-items: center;">
+            <span class="material-symbols-outlined" style="padding: 5px; margin-right: 5px">logout</span>Log out</a></li>
       </ul>
     </li>
   </ul>
