--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -19,50 +19,56 @@
         <li class="nav-item">
             {% if request.path == dashboard %}
                 <a class="nav-link active text-center" aria-current="page" href="{% url 'dashboard' %}">Home</a>
-            {%else%}
+            {% else %}
                 <a class="nav-link text-center" aria-current="page" href="{% url 'dashboard' %}">Home</a>
             {% endif %}
         </li>
         <li class="nav-item">
             {% if request.path == upload_file %}
                 <a class="nav-link active text-center" aria-current="page" href="{% url 'upload_file' %}">Upload</a>
-            {%else%}
+            {% else %}
                 <a class="nav-link text-center" aria-current="page" href="{% url 'upload_file' %}">Upload</a>
             {% endif %}
         </li>
         <li class="nav-item">
             {% if request.path == share_file %}
                 <a class="nav-link active text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
-            {%else%}
+            {% else %}
                 <a class="nav-link text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
             {% endif %}
         </li>
         <li class="nav-item">
             {% if request.path == filelist %}
                 <a class="nav-link active text-center" aria-current="page" href="{% url 'filelist' %}">My Files</a>
-            {%else%}
+            {% else %}
                 <a class="nav-link text-center" aria-current="page" href="{% url 'filelist' %}">My Files</a>
             {% endif %}
         </li>
         <li class="nav-item">
             {% if request.path == team_list or request.path == create_team or 'team_detail' in request.path %}
                 <a class="nav-link active text-center" aria-current="page" href="{% url 'team_list' %}">My Teams</a>
-            {%else%}
+            {% else %}
                 <a class="nav-link text-center" aria-current="page" href="{% url 'team_list' %}">My Teams</a>
             {% endif %}
         </li>
         <li class="nav-item">
             {% if request.path == shared_file_list %}
-                <a class="nav-link active text-center" aria-current="page" href="{% url 'shared_file_list' %}">Shared To Me</a>
-            {%else%}
+                <a class="nav-link active text-center" aria-current="page" href="{% url 'shared_file_list' %}">Shared To
+                    Me</a>
+            {% else %}
                 <a class="nav-link text-center" aria-current="page" href="{% url 'shared_file_list' %}">Shared To Me</a>
             {% endif %}
         </li>
         <li class="nav-item">
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault"><i id="mode-icon" class="bi bi-brightness-high"></i></label>
+                <label class="form-check-label" for="flexSwitchCheckDefault"><i id="mode-icon"
+                                                                                class="bi bi-brightness-high"></i></label>
             </div>
         </li>
     </ul>
+    <div class="avatar-name">
+        <img src="{{ user.avatar_url }}" alt="{{ user.username }}'s avatar" class="sidebar-img rounded">
+        <h5>{{ user.username }}</h5>
+    </div>
 </div>
