--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -17,7 +17,7 @@
 
             <div class="container mt-8 space-y-2">
                 <form class="mt-2 space-y-2" action="{% url 'upload_file' %}" method="post"
-                      enctype="multipart/form-data" onsubmit="enableUploadButton()">
+                      enctype="multipart/form-data" onsubmit="enableUploadButton()" id="upload-form">
                     {% csrf_token %}
                     <div class="grid grid-cols-1 space-y-2">
                         <label class="text-sm font-bold text-gray-500 tracking-wide">Share To (optional)</label>
@@ -99,10 +99,12 @@
                                         </div>
                                         <div class="progress" style="width: 200px;">
                                             <div class="progress-bar bg-success progress-bar-striped progress-bar-animated"
-                                                 style="width:100%"></div>
+                                                 style="width:100%" id="success-bar">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+                                <h3 id="status">100%</h3>
                                 <button type="button" class="btn-close btn-sm" aria-label="Close"></button>
                             </div>
                         {% endif %}
@@ -223,7 +225,37 @@
             console.log(`File dropped: ${fileName}`);
         }
 
+        document.getElementById('upload-form').addEventListener('submit', function (event) {
+            var progressBar = document.getElementById("success-bar");
+            var status = document.getElementById("status");
+            
+            progressBar.style.width = "0%";
+            status.innerHTML = "0%";
 
+            var duration = 800;
+            var interval = 20;
+
+            var startTime = new Date().getTime();
+
+            function updateProgress() {
+                var currentTime = new Date().getTime();
+                var elapsedTime = currentTime - startTime;
+                var percentComplete = (elapsedTime / duration) * 100;
+
+                if (percentComplete > 100) {
+                    percentComplete = 100;
+                }
+
+                progressBar.style.width = Math.round(percentComplete) + "%";
+                status.innerHTML = Math.round(percentComplete) + "%";
+
+                if (percentComplete < 100) {
+                    setTimeout(updateProgress, interval);
+                }
+            }
+            updateProgress();
+
+        });
     </script>
 
 {% endblock %}
