--- a/tasks/templates/partials/messages.html
+++ b/tasks/templates/partials/messages.html
@@ -1,13 +1,19 @@
 {% if messages %}
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
         {% for message in messages %}
-          <div class="alert alert-{{ message.level_tag }}" role="alert">
-            {{ message }}
-          </div>
+            <div class="toast show alert-{{ message.level_tag }}" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <strong class="me-auto">Crimson</strong>
+                    <small>just now</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    {{ message }}
+                </div>
+            </div>
         {% endfor %}
-      </div>
     </div>
-  </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 {% endif %}
